--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,14 @@ knitr::opts_chunk$set(
 ```
 
 # metaboprep
-
 <!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
+
+<div style="text-align: center">
+  <img src="man/figures/logo.png" alt="metaboprep logo" width="150"/> 
+</div>
+
 
 The goal of metaboprep is to ...
 
@@ -38,18 +43,4 @@ library(metaboprep)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
