--- a/vignettes/generate_report.Rmd
+++ b/vignettes/generate_report.Rmd
@@ -44,6 +44,7 @@ m <- m |>
 
 # render report
 generate_report(m,
+                project = "myproject",
                 output_dir=getwd(),
                 output_filename=NULL,
                 format="html",
