--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,9 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-<div style="text-align: center">
-  <img src="man/figures/logo.png" alt="metaboprep logo" width="150"/> 
-</div>
+<!-- <div style="text-align: center"> -->
+<!--   <img src="man/figures/logo.png" alt="metaboprep logo" width="150"/>  -->
+<!-- </div> -->
 
 
 The goal of metaboprep is to ...
