--- a/inst/rmarkdown/templates/qc_report/skeleton/03_summary_filtered_data.Rmd
+++ b/inst/rmarkdown/templates/qc_report/skeleton/03_summary_filtered_data.Rmd
@@ -580,12 +580,18 @@ if( length(batch_variables) > 0 ) {
 TypeII ANOVA: the eta-squared (eta-sq) estimates are an estimation of the percent of variation explained by each independent variable, after accounting for all other variables, as derived from the sum of squares. This is a multivariate evaluation of batch variables on *sample missingness*. Presence of NA's would indicate that the model is inappropriate.
 
 ```{r sample_missingness_multivatiave_anova}
-if( length(batch_variables) > 0 ) {
+if (length(batch_variables) > 0 && any(qc_samples[["missingness"]] > 0)) {
   ## run multivariate ANOVA
-  multivariate_anova(dep = qc_samples[["missingness"]], indep_df = as.data.frame(lapply(qc_samples[batch_variables], as.factor)) )
-} else {
+  multivariate_anova(
+    dep = qc_samples[["missingness"]],
+    indep_df = as.data.frame(lapply(qc_samples[batch_variables], as.factor))
+  )
+} else if (length(batch_variables) == 0) {
   paste0(" -- No sample level batch variables were provided or all were invariable -- ")
+} else {
+  paste0(" -- No missingness observed in samples, skipping multivariate ANOVA -- ")
 }
+
 ```
 
 
